--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <title>Dungeons and Slack</title>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Lemonada:wght@600&display=swap" rel="stylesheet">  </head>
   <body>
     <div id="root"></div>
