--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Dungeons and Slack</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Lemonada:wght@600&display=swap" rel="stylesheet">  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <title>Dungeons and Slack</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Lemonada:wght@600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
 </html>
