--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dungeons and Slack</title>
+  <meta property="og:title" content="Dungeons and Slack">
+  <meta name="image" property="og:image" content="/DnS-ss.PNG">
+  <meta property="og:description" content="Dungeons and Slack —A live chat app.">
+  <meta property="og:url" content="https://tamagrijr.github.io/dnsFrontend/">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Lemonada:wght@600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
