--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Dungeons and Slack</title>
   <meta property="og:title" content="Dungeons and Slack">
-  <meta name="image" property="og:image" content="https://imgur.com/a/R81zNJv">
+  <meta name="image" property="og:image" content="https://i.imgur.com/HUvlevt.png">
   <meta property="og:description" content="Dungeons and Slack —A live chat app.">
   <meta property="og:url" content="https://tamagrijr.github.io/dnsFrontend/">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Lemonada:wght@600&display=swap"
