another image update test

--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:title" content="Dungeons and Slack" />
+    <meta property="og:image" content="https://i.imgur.com/HUvlevt.png" />
+    <meta
+      property="og:description"
+      content="Dungeons and Slack —A live chat app."
+    />
+    <meta
+      property="og:url"
+      content="https://tamagrijr.github.io/dnsFrontend/"
+    />
+    <meta name="theme-color" content="#FF0000" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Lemonada:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <title>Dungeons and Slack</title>
+  </head>
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Dungeons and Slack</title>
-  <meta property="og:title" content="Dungeons and Slack">
-  <meta name="image" property="og:image" content="https://i.imgur.com/HUvlevt.png">
-  <meta property="og:description" content="Dungeons and Slack —A live chat app.">
-  <meta property="og:url" content="https://tamagrijr.github.io/dnsFrontend/">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital@0;1&family=Lemonada:wght@600&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-</head>
-
-<body>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
