--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta property="og:title" content="Dungeons and Slack" />
-    <meta property="og:image" content="https://i.imgur.com/HUvlevt.png" />
+    <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://i.imgur.com/HUvlevt.png"/>
     <meta
       property="og:description"
       content="Dungeons and Slack —A live chat app."
